--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 				<nav id="main-navigation">
 					<ul id="menu-hoofdmenu" class="menu"><li id="menu-item-1030" class="jobs menu-item menu-item-type-post_type menu-item-object-page menu-item-1030"><a href="https://community.nodebb.org/">Community</a></li>
-<li id="menu-item-15" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-15"><a href="https://nodebb.org/">Official</a></li>
+<li id="menu-item-15" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-15"><a href="https://github.com/pikshub/nodebblist/issues">Submit</a></li>
 </ul><select class="tp-mobile-nav"><option data-url="https://community.nodebb.org/" class="depth1" >Community</option><option data-url="https://nodebb.org/" class="depth1" >Official</option></select>
 				</nav>
 
